fix: is_liked in compilation handlers and other minor fixes
